# comfyui-lama-remover

./: .gitignore  README.md  __init__.py  pyproject.toml  utils.py
lama/: __init__.py  model.py
nodes/: remover.py
